--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
       </div>
     </div>
 
-    <a href="#" class="cta">Start Earning Now →</a>
+    <a href="https://uplevelrewarded.com/aff_c?offer_id=3261&aff_id=4626" class="cta">Start Earning Now →</a>
 
     <div class="review-box" id="reviewBox">💬 “Made my first £10 in 10 minutes!” – Jake P.</div>
 
